--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "cheems-design",
   "version": "0.1.0",
   "private": true,
+  "author": "cheems",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^0.19.1",
     "classnames": "^2.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -14,22 +19,38 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/prompt-cli": "^19.3.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/user-event": "^13.5.0",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^16.18.99",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-transition-group": "^4.4.6",
-    "@types/jest": "^29.5.12",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "sass": "^1.77.6",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "pnpm clean && pnpm build-ts && pnpm build-css",
+    "build-ts": "tsc -p tsconfig.build.json",
+    "build-css": "node-sass ./src/styles/index.scss ./build/index.css",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "node-sass": "^9.0.0",
+    "clean": "rimraf ./build",
+    "eject": "react-scripts eject",
+    "prepare": "husky",
+    "commit": "commit"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pnpm lint"
+    }
   },
   "eslintConfig": {
     "extends": [
