--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cheems-design",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "description": "React components and hooks library",
   "private": false,
   "author": "cheems",
@@ -18,6 +18,9 @@
     "type": "git",
     "url": "https://github.com/lyx123v/cheems-design"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
